--- a/floran/Makefile
+++ b/floran/Makefile
@@ -6,7 +6,7 @@
 #    By: fmauguin <fmauguin@student.42.fr >         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/03 14:23:03 by fmauguin          #+#    #+#              #
-#    Updated: 2022/06/21 18:07:49 by fmauguin         ###   ########.fr        #
+#    Updated: 2022/06/21 18:59:17 by fmauguin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -45,7 +45,6 @@ UTILSSRC			:=	utils/ft_atoll.c				\
 						utils/display_msg.c				\
 						utils/ft_join3.c				\
 						utils/ft_strcmp.c				\
-						utils/ft_lst_sort.c				\
 						utils/ft_lst_remove_if.c		\
 						utils/free.c					\
 
@@ -56,6 +55,7 @@ TREESRC				:=	astree/astree.c					\
 
 EXPANDSRC			:=	expand/wildcard.c				\
 						expand/lst_utils.c				\
+						expand/ft_lst_sort_custom.c		\
 						expand/wc_utils.c				\
 						expand/prefix_suffix.c			\
 						expand/update_wc.c				\
