--- a/germain/Makefile
+++ b/germain/Makefile
@@ -6,7 +6,7 @@
 #    By: gtoubol <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/05/25 10:59:36 by gtoubol           #+#    #+#              #
-#    Updated: 2022/06/27 13:01:15 by gtoubol          ###   ########.fr        #
+#    Updated: 2022/06/29 10:45:14 by gtoubol          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
@@ -22,6 +22,7 @@ SRCS =		$(addprefix environment/,	environment_copy.c	\
 										environment_var_compare.c \
 										ft_newdico.c		\
 										ft_freedico.c)		\
+			$(addprefix signals/,		manage_pid.c)		\
 			$(addprefix builtins/,		builtin_echo.c 		\
 										builtin_cd.c 		\
 										builtin_pwd.c		\
