Signal handling update
Add a last pid indicator and a is_signaled indicator to check the
status of the execution and return the right timing.

--- a/germain/Makefile
+++ b/germain/Makefile
@@ -24,7 +24,9 @@ SRCS =		$(addprefix environment/,	environment_copy.c	\
 										ft_newdico.c		\
 										ft_freedico.c)		\
 			$(addprefix signals/,		manage_pid.c		\
-										pid_utils.c)		\
+										pid_utils.c			\
+										interupted.c		\
+										last_pid.c)			\
 			$(addprefix builtins/,		builtin_echo.c 		\
 										builtin_cd.c 		\
 										builtin_pwd.c		\
